plugins {
	id 'org.springframework.boot' version '2.5.3'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'br.com.kbmg'
version = '0.0.1'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation('org.springframework.boot:spring-boot-starter-validation')
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
//	implementation 'org.liquibase:liquibase-core'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'mysql:mysql-connector-java'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation "io.springfox:springfox-boot-starter:3.0.0"

	// https://mvnrepository.com/artifact/com.google.code.gson/gson
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'

	// https://mvnrepository.com/artifact/com.google.guava/guava
	implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'

	// https://mvnrepository.com/artifact/org.mapstruct/mapstruct
	compileOnly group: 'org.mapstruct', name: 'mapstruct', version: '1.3.1.Final'
	testCompileOnly group: 'org.mapstruct', name: 'mapstruct', version: '1.3.1.Final'
	annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.1.Final'
	testAnnotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.1.Final'

	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'

}

test {
	useJUnitPlatform()
}

springBoot {
	buildInfo()
}

bootRun {

	args = ["--spring.profiles.active=${project.properties['profile'] ?: 'test'}",
			"--spring.datasource.url=${project.properties['dburl'] ?: 'jdbc:h2:file:~/music-control-h2'}",
			"--spring.datasource.username=${project.properties['dbuser'] ?: 'inmemory'}",
			"--spring.datasource.password=${project.properties['dbpass'] ?: 'pass'}",
			"--spring.mail.username=${project.properties['mailUser']}",
			"--spring.mail.password=${project.properties['mailPassSocial']}"
	]

}